--- a/singleuser/Dockerfile
+++ b/singleuser/Dockerfile
@@ -2,3 +2,8 @@ ARG DOCKER_NOTEBOOK_IMAGE
 FROM $DOCKER_NOTEBOOK_IMAGE
 ARG JUPYTERHUB_VERSION
 RUN python3 -m pip install --no-cache jupyterhub==$JUPYTERHUB_VERSION
+
+
+COPY ./init_course_data.sh /
+RUN bash /init_course_data.sh
+
